--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "firebase": "^10.7.1",
     "lucide-react": "^0.263.1",
     "@headlessui/react": "^1.7.17",
     "date-fns": "^2.30.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "react-hot-toast": "^2.4.1",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
